# gillean

./: .gitignore  CHANGELOG.md  Cargo.toml  PYTHON_TEST_SUITE_README.md  README.md  blockchain_test_suite.py  cleanup_db.sh  comprehensive_blockchain_test.py  demo_blockchain_test.py  enhanced_blockchain_test.py  requirements.txt  run_comprehensive_tests.sh  run_dev_tests.sh
contract_toolkit/: db  snap.0000000000000222
contracts/: Cargo.toml  README.md
contracts/examples/counter/: Cargo.toml
contracts/examples/counter/src/: lib.rs
contracts/examples/escrow/: Cargo.toml
contracts/examples/escrow/src/: lib.rs
contracts/examples/token/: Cargo.toml
contracts/examples/token/src/: lib.rs
contracts/examples/voting/: Cargo.toml
contracts/examples/voting/src/: lib.rs
docs/: api.md  architecture.md  contracts.md  development.md  installation.md  quickstart.md  zkp.md
examples/: counter.txt
frontend/: Cargo.toml  README.md  index.html  styles.css
frontend/src/: api.rs  app.rs  components.rs  main.rs
frontend/src/components/: blockchain_view.rs  contract_deploy.rs  metrics_view.rs  transaction_form.rs  wallet_manager.rs
sdk/: Cargo.toml  README.md
sdk/src/: analytics.rs  client.rs  contracts.rs  lib.rs  transactions.rs  wallet.rs
sdk/typescript/: README.md  package.json
sdk/typescript/src/: analytics.ts  client.ts  contracts.ts  did.ts  ethereum.ts  governance.ts  index.ts  sdk.ts  simulation.ts  transactions.ts  types.ts  utils.ts  wallet.ts
src/: api.rs  block.rs  block_explorer.rs  blockchain.rs  consensus.rs  contract_toolkit.rs  crypto.rs  deployment.rs  dev_utils.rs  developer_tools.rs  did.rs  error.rs  ethereum.rs  governance.rs  interop.rs  lib.rs  main.rs  merkle.rs  monitor.rs  monitoring.rs  network.rs  performance.rs  proof_of_work.rs  security.rs  sharding.rs  simulation.rs  smart_contract.rs  state_channels.rs  storage.rs  transaction.rs  utils.rs  wallet.rs  wallet_app.rs  zkp.rs
src/cli/: deployment.rs
templates/: rust_sdk.rs  typescript_sdk.ts
tests/: README.md  ai_integration_tests.rs  consensus_tests.rs  contract_features_tests.rs  cross_chain_tests.rs  deployment_tests.rs  developer_tools_tests.rs  did_tests.rs  ecosystem_tools_tests.rs  governance_tests.rs  integration_test.rs  integration_tests.rs  mobile_tests.rs  mod.rs  performance_tests.rs  rollups_tests.rs  run_tests.rs  security_comprehensive_tests.rs  security_tests.rs  sharding_tests.rs  state_channels_tests.rs  state_integrity_tests.rs  storage_integrity_tests.rs  stress_tests.rs  test_runner.rs  wasm_vm_tests.rs  zkp_tests.rs
