[package]
name = "gillean-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
gloo-timers = "0.2"
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo-console = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
gloo-storage = "0.2"
wasm-logger = "0.2"
