[package]
name = "gillean-sdk"
version = "2.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Rust SDK for interacting with Gillean blockchain platform"
license = "MIT"
repository = "https://github.com/yourusername/gillean"
keywords = ["blockchain", "sdk", "rust", "gillean", "api"]
categories = ["api-bindings", "cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = "2.0"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-tungstenite = "0.20"
url = "2.4"
async-trait = "0.1"
rand = "0.8"
sha2 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[lib]
name = "gillean_sdk"
path = "src/lib.rs"
