[package]
name = "escrow-contract"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Escrow smart contract for Gillean blockchain"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
gillean-contract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
